:lipstick: add track colors
copied from https://github.com/capraconsulting/capracon-2022/blob/e167c16d67aac92e0e0158904cb857c77d84f928/web/src/styles/custom-properties.css#LL15-L18C27

--- a/app/styles/program.css
+++ b/app/styles/program.css
@@ -1,5 +1,9 @@
 :root {
   --row: auto;
+  --color-site-1: #00ff4e;
+  --color-site-2: #9529ff;
+  --color-site-3: #ffd600;
+  --color-site-4: #ff702d;
 }
 /*************************
  * GRID SCHEDULE LAYOUT
