--- a/app/styles/program.css
+++ b/app/styles/program.css
@@ -1,9 +1,8 @@
 :root {
   --row: auto;
-  --color-site-1: #00ff4e;
-  --color-site-2: #9529ff;
-  --color-site-3: #ffd600;
-  --color-site-4: #ff702d;
+  --color-site-1: #bbdde6;
+  --color-site-2: #651d32;
+  --color-site-3: #ffd2b9;
 }
 /*************************
  * GRID SCHEDULE LAYOUT
@@ -14,6 +13,9 @@
     grid-gap: 1em;
     grid-template-rows:
       [tracks] auto
+      [time-0845] var(--row)
+      [time-0850] var(--row)
+      [time-0855] var(--row)
       [time-0900] var(--row)
       [time-0905] var(--row)
       [time-0910] var(--row)
@@ -222,7 +224,7 @@
     }
 
     .trackSlot:nth-child(3) div {
-      border-bottom-color: var(--color-site-4);
+      border-bottom-color: var(--color-site-3);
     }
   }
 }
