:lipstick: position the schedule in a single flex column on mobile

--- a/app/styles/program.css
+++ b/app/styles/program.css
@@ -4,10 +4,15 @@
 /*************************
  * GRID SCHEDULE LAYOUT
  *************************/
+.schedule {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
 @media screen and (min-width: 1024px) /* tablet */ {
   .schedule {
     display: grid;
-    grid-gap: 1em;
+    gap: 1em;
     grid-template-rows:
       [tracks] auto
       [time-0845] var(--row)
