fix: add black bg if user prefers that

--- a/app/styles/program.css
+++ b/app/styles/program.css
@@ -1,6 +1,13 @@
 :root {
   --row: auto;
 }
+
+@media (prefers-color-scheme: dark) {
+  html {
+    background-color: black !important;
+  }
+}
+
 /*************************
  * GRID SCHEDULE LAYOUT
  *************************/
